objects/vlocity_cmt__EntityFilterMember__c.object
<CustomObject>
    <description>A Vlocity Entity Filter Member is created when the members of the results set are identified as a specific set of products &amp; pricebooks.  Each entry represents a member of the set of products or pricebooks.</description>
    <fields>
        <fullName>vlocity_cmt__EntityFilterId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity Filter</label>
        <referenceTo>vlocity_cmt__EntityFilter__c</referenceTo>
        <relationshipLabel>Entity Filter Members</relationshipLabel>
        <relationshipName>EntityFilterMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PriceBookId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Entity Filter Members</relationshipLabel>
        <relationshipName>EntityFilterMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Entity Filter Members</relationshipLabel>
        <relationshipName>EntityFilterMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Entity Filter Member</label>
    <nameField>
        <displayFormat>EFM-{0000000}</displayFormat>
        <label>Entity Filter Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entity Filter Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>